<resources>
    <string name="app_name">LiveDataPOC</string>
    <string name="email">e-mail</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="invalid_form">Oops, the form seems to be incorrect</string>
    <string name="invalid_email">This email is invalid</string>
    <string name="invalid_password">The password should have at least 8 characters</string>
    <string name="error_required">This field cannot be empty</string>
    <string name="ok">OK</string>
    <string name="phone">Phone</string>
</resources>
