<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
            type="com.iacovelli.livedatapoc.login.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/normal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small"
                app:error="@{viewModel.formValidator.emailError}">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    app:validator="@{viewModel.formValidator.emailValidator}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal"
                app:error="@{viewModel.formValidator.passwordError}">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    app:validator="@{viewModel.formValidator.passwordValidator}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal"
                app:error="@{viewModel.formValidator.phoneError}">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:text="@={viewModel.phone}"
                    app:formatter="@{viewModel.phoneFormatter}"
                    app:validator="@{viewModel.formValidator.phoneValidator}"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/submit"
                android:theme="@style/ButtonAccent"
                android:onClick="@{_ -> viewModel.onUserSubmit()}"
                android:enabled="@{viewModel.buttonEnabled}"
                tools:enabled="true"/>

        </LinearLayout>
        <include
            layout="@layout/loading"
            app:loading="@{viewModel.loading}"
            tools:visibility="gone"/>
    </RelativeLayout>
</layout>